--- a/powerlifting.html
+++ b/powerlifting.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <title>My Hobbies Website</title>
 </head>
-<body>
+<body id="pl">
   <!-- navigation list -->
   <nav>
     <a href="index.html">Home</a> |
@@ -12,8 +13,14 @@
   </nav>
 
   <!-- page -->
-  <h1>Welcome to My Website</h1>
+  <h1>Powerlifting</h1>
   <p>Placeholder for the PL page.</p>
-  <img src="images/pl.jpg" alt="Placeholder image">
+  <div class="img-container">
+    <img src="images/pl.jpg" alt="Placeholder image" onmouseover="showText('TEXT')" onmouseout="resetText()">
+  </div>
+
+  <div id="hover-text-box"></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
